--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../src/output.css">
+    <!--<link rel="stylesheet" href="../src/output.css">-->
     <script src="https://kit.fontawesome.com/a0c842bc83.js" crossorigin="anonymous"></script>
     <title>wallset</title>
 </head>
